--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,45 @@
     transform: rotate(360deg);
   }
 }
+
+/* ---------------------------------------- */
+
+.header{
+  text-align: center;
+}
+
+.inputs{
+  display: flex;
+  justify-content: center;
+}
+
+.label{
+  margin-right: 15px;
+}
+
+.width-10{
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.flex-center{
+  display: flex;
+ justify-content: center;
+}
+
+.buttonList{
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.button{
+  background-color: cornflowerblue;
+  margin: 5px;
+  padding: 2px 3px;
+  border: 0.5px solid rgb(6, 57, 153);
+  border-radius: 3px;
+  cursor: pointer;
+}
